--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "release": "bash build/release.sh"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "chart.js": "^2.6.0",
+    "vue": "^2.3.3",
+    "vue-chartjs": "^2.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.4",
